--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@
 
 # Site settings
 title: Telectric Ingeniería
-email: your-email@domain.com
+email: info@telectric.es
 description: > # this means to ignore newlines until "baseurl:"
   Proyectos — Instalaciones — Integración
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://www.telectric.es" # the base hostname & protocol for your site
 
 # Social media profiles - feel free to add more here
-twitter_username: SBootstrap
-github_username:  BlackrockDigital
-facebook_username: StartBootstrap
+twitter_username: telectric_es
+github_username:  telectric
+#facebook_username: telectric
 #instagram_username: beyonce
 #stackoverflow_url: https://
 #googleplus_username: BobMarley
@@ -24,10 +24,10 @@ facebook_username: StartBootstrap
 #linkedin_url: https://
 
 # Address information
-address_street: 3034 Melrose Place
-address_city: Beverly Hills
-address_state: CA
-address_zip: 90201
+address_street: C/General Moscardó Guzman
+address_city: Guadalajara
+address_state: España
+address_zip: 19007
 
 # Build settings
 markdown: kramdown
