--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,10 @@ github_username:  telectric
 #skype_username: echo123
 #linkedin_url: https://
 
+fijo: 949 22 22 22
+movil: 666 333 111
+correo: info arroba telectric punto es
+
 # Address information
 address_street: C/General Moscardó Guzman
 address_city: Guadalajara
