--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,17 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-title: Telectric Ingeniería
-email: info@telectric.es
-description: > # this means to ignore newlines until "baseurl:"
-  Proyectos — Instalaciones — Integración
+# Site settings Atelia Integradores S.L.
+title: Atelia
+email: info@atelia.es
+description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
+  Ingeniería · Instalaciones · Integración
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.telectric.es" # the base hostname & protocol for your site
+url: "http://www.atelia.es" # the base hostname & protocol for your site
 
 # Social media profiles - feel free to add more here
-twitter_username: telectric_es
-github_username:  telectric
+#twitter_username: telectric_es
+#github_username:  telectric
 #facebook_username: telectric
 #instagram_username: beyonce
 #stackoverflow_url: https://
@@ -25,7 +25,7 @@ github_username:  telectric
 
 fijo: 949 22 22 22
 movil: 666 333 111
-correo: info arroba telectric punto es
+correo: info arroba atelia punto es
 
 # Address information
 address_street: C/General Moscardó Guzman
