--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@
 title: Atelia Tecnología S.L.
 email: info@atelia.es
 description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
-Proyectos Instalaciones Servicios
-baseurl: "" # the subpath of your site, e.g. /blog
+ Proyectos Instalaciones Servicios
+baseurl: "" 
+# the subpath of your site, e.g. /blog
 url: "http://www.atelia.es" # the base hostname & protocol for your site
 
 # Social media profiles - feel free to add more here
