--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ email: info@atelia.es
 description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
  Proyectos Instalaciones Servicios
 baseurl: "" 
+
+servicios: "./_servicios"
+
 # the subpath of your site, e.g. /blog
 url: "http://www.atelia.es" # the base hostname & protocol for your site
 
