--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings Atelia Integradores S.L.
-title: Atelia Tecnología
+title: Atelia
 email: info@atelia.es
 description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
 # Proyectos Instalaciones Servicios
- Atelia Tecnología
+ Atelia
 baseurl: "" 
 # the subpath of your site, e.g. /blog
 url: "http://www.atelia.es" # the base hostname & protocol for your site
