--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings Atelia Integradores S.L.
-title: "Atelia"
+
+title: "Factores"
+#email: info@factores.es
+
 email: info@atelia.es
 description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
 # Proyectos Instalaciones Servicios
