--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings Atelia Integradores S.L.
+# Site settings
+#title: "Bitácora de Factores"
+title: "Factores"
 #email: info@factores.es
-
-email: info@atelia.es
-description: > # this means to ignore newlines until "baseurl:" #Ingeniería — Instalaciones — Integración
-# Proyectos Instalaciones Servicios
- Atelia Tecnología
-baseurl: "" 
-# the subpath of your site, e.g. /blog
-url: "http://www.atelia.es" # the base hostname & protocol for your site
-
-# Social media profiles - feel free to add more here
-#twitter_username: telectric_es
-#github_username:  telectric
-#facebook_username: telectric
-#instagram_username: beyonce
-#stackoverflow_url: https://
-#googleplus_username: BobMarley
-#skype_username: echo123
-#linkedin_url: https://
-
-fijo: 949 22 22 22
-movil: 666 333 111
-correo: info arroba atelia punto es
-
-# Address information
-address_street: C/General Moscardó Guzman
-address_city: Guadalajara
-address_state: España
-address_zip: 19007
-
+lema: La libertad es hacer y se aprende haciendo
+description: "Por ignorantes erramos, mas de los errores aprendemos"
+baseurl: ""
+url: ""
+twitter_username: factores_es
+github_username:  factores
 # Build settings
 markdown: kramdown
+kramdown:
+  syntax_highlighter: rouge
+#redcarpet
+#kramdown
+#permalink: pretty
