--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #title: "Bitácora de Factores"
 title: "Atelia"
 #email: info@factores.es
-lema: La libertad es hacer y se aprende haciendo
+#lema: La libertad es hacer y se aprende haciendo
 description: "Atelia Tecnología"
 baseurl: ""
 url: ""
